[package]
name = "reqev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
ureq = "2.4.0"
yaml-rust2 = "0.8.0"
serde_yaml = "0.8.24"
serde_json = "1.0.81"
